force-app/main/default/objects/Issue_Hierarchy__c/Issue_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Issue Hierarchy</label>
    <nameField>
        <displayFormat>IH{0000}</displayFormat>
        <label>Issue Hierarchy Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>