force-app/main/default/objects/Issue_Hierarchy__c/fields/Alcs_Investigation_Level__c.field-meta.xml
<CustomField>
    <fullName>Alcs_Investigation_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alcs Investigation Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>