force-app/main/default/objects/Issue_Hierarchy__c/fields/Alert_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Alert_Distribution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert Distribution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>