force-app/main/default/objects/Issue_Hierarchy__c/fields/Cause_Code__c.field-meta.xml
<CustomField>
    <fullName>Cause_Code__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Cause__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cause Code</label>
    <type>Text</type>
</CustomField>