force-app/main/default/objects/Issue_Hierarchy__c/fields/Cause_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Cause_Identifier__c</fullName>
    <formula>Product_Line__r.Name &amp; Issue_Type__r.Description__c &amp; Reason__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cause Identifier</label>
    <type>Text</type>
</CustomField>