force-app/main/default/objects/Issue_Hierarchy__c/fields/Cause_Name__c.field-meta.xml
<CustomField>
    <fullName>Cause_Name__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Cause__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cause Name</label>
    <type>Text</type>
</CustomField>