force-app/main/default/objects/Issue_Hierarchy__c/fields/CauseId__c.field-meta.xml
<CustomField>
    <fullName>CauseId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CauseId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>