force-app/main/default/objects/Issue_Hierarchy__c/fields/Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Classification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Code</label>
    <type>Text</type>
</CustomField>