force-app/main/default/objects/Issue_Hierarchy__c/fields/Classification_Des__c.field-meta.xml
<CustomField>
    <fullName>Classification_Des__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Classification__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Des</label>
    <type>Text</type>
</CustomField>