force-app/main/default/objects/Issue_Hierarchy__c/fields/ClassificationDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>ClassificationDisplayOrder__c</fullName>
    <description>Feed Outbound - Hardcode value &quot;0&quot;</description>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Display Order</label>
    <type>Text</type>
</CustomField>