force-app/main/default/objects/Issue_Hierarchy__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <description>Feed Outbound - HardCode Value &quot;ISSUEHIERARCHY&quot;.</description>
    <formula>&apos;ISSUEHIERARCHY&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Type</label>
    <type>Text</type>
</CustomField>