force-app/main/default/objects/Issue_Hierarchy__c/fields/Cust_Cons_Flag__c.field-meta.xml
<CustomField>
    <fullName>Cust_Cons_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustConsFlag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>