force-app/main/default/objects/Issue_Hierarchy__c/fields/Duplicate_Issue_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Issue_Hierarchy__c</fullName>
    <formula>Classification__r.Description__c + Product_Line__r.Name + Issue_Type__r.Description__c + Group__r.Description__c + Reason__r.Description__c + Cause__r.Description__c</formula>
    <label>Duplicate Issue Hierarchy</label>
    <type>Text</type>
</CustomField>