force-app/main/default/objects/Issue_Hierarchy__c/fields/Escalate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EscalateFlag</label>
    <type>Checkbox</type>
</CustomField>