force-app/main/default/objects/Issue_Hierarchy__c/fields/EscalateFlagFeed__c.field-meta.xml
<CustomField>
    <fullName>EscalateFlagFeed__c</fullName>
    <description>Feed Outbound - EscalateFlag Format Output value.</description>
    <formula>IF( Escalate_Flag__c==TRUE, &apos;1&apos;, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EscalateFlag_Feed</label>
    <type>Text</type>
</CustomField>