force-app/main/default/objects/Issue_Hierarchy__c/fields/Factory_Controllable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Factory_Controllable_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factory Controllable Flag</label>
    <type>Checkbox</type>
</CustomField>