force-app/main/default/objects/Issue_Hierarchy__c/fields/FactoryControllableFlagFeed__c.field-meta.xml
<CustomField>
    <fullName>FactoryControllableFlagFeed__c</fullName>
    <description>Feed Outbound - Format Output value.</description>
    <formula>IF( Factory_Controllable_Flag__c==TRUE, &apos;1&apos;, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FactoryControllableFlag_Feed</label>
    <type>Text</type>
</CustomField>