force-app/main/default/objects/Issue_Hierarchy__c/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Code</label>
    <type>Text</type>
</CustomField>