force-app/main/default/objects/Issue_Hierarchy__c/fields/Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>Group_Desc__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Group__r.Description__c</formula>
    <label>Group Desc</label>
    <type>Text</type>
</CustomField>