force-app/main/default/objects/Issue_Hierarchy__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <formula>Product_Line__r.Name &amp; &quot;|&quot; &amp;  Issue_Type__r.Description__c &amp; &quot;|&quot; &amp;  Reason__r.Description__c &amp; &quot;|&quot; &amp;  Classification__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>