force-app/main/default/objects/Issue_Hierarchy__c/fields/Issue_Association__c.field-meta.xml
<CustomField>
    <fullName>Issue_Association__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Association</label>
    <length>20</length>
    <type>Text</type>
</CustomField>