force-app/main/default/objects/Issue_Hierarchy__c/fields/Issue_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Issue_Rollup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>