force-app/main/default/objects/Issue_Hierarchy__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Issue Type</label>
    <referenceTo>Issue_Type__c</referenceTo>
    <relationshipLabel>Issue Hierarchies</relationshipLabel>
    <relationshipName>Issue_Hierarchies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>