force-app/main/default/objects/Issue_Hierarchy__c/fields/Issue_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Code__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Issue_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Type Code</label>
    <type>Text</type>
</CustomField>