force-app/main/default/objects/Issue_Hierarchy__c/fields/Issue_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Name__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Issue_Type__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Type Name</label>
    <type>Text</type>
</CustomField>