force-app/main/default/objects/Issue_Hierarchy__c/fields/IssueTypeDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>IssueTypeDisplayOrder__c</fullName>
    <description>Feed Outbound - Hardcode value 0.</description>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IssueTypeDisplayOrder</label>
    <type>Text</type>
</CustomField>