force-app/main/default/objects/Issue_Hierarchy__c/fields/Manf_Investigation_Level__c.field-meta.xml
<CustomField>
    <fullName>Manf_Investigation_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manf Investigation Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>