force-app/main/default/objects/Issue_Hierarchy__c/fields/Pqrb_Rtp_Category__c.field-meta.xml
<CustomField>
    <fullName>Pqrb_Rtp_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pqrb Rtp Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>