force-app/main/default/objects/Issue_Hierarchy__c/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <formula>Product_Line__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Code</label>
    <type>Text</type>
</CustomField>