force-app/main/default/objects/Issue_Hierarchy__c/fields/Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Name__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Product_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Name</label>
    <type>Text</type>
</CustomField>