force-app/main/default/objects/Issue_Hierarchy__c/fields/Product_Return_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Return_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Return Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>