force-app/main/default/objects/Issue_Hierarchy__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reason</label>
    <referenceTo>Reason__c</referenceTo>
    <relationshipLabel>Issue Hierarchies</relationshipLabel>
    <relationshipName>Issue_Hierarchies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>