force-app/main/default/objects/Issue_Hierarchy__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Reason__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code</label>
    <type>Text</type>
</CustomField>