force-app/main/default/objects/Issue_Hierarchy__c/fields/Reason_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Reason_Identifier__c</fullName>
    <description>It is only for feed.</description>
    <formula>Product_Line__r.Name &amp;  Issue_Type__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Identifier</label>
    <type>Text</type>
</CustomField>