force-app/main/default/objects/Issue_Hierarchy__c/fields/Reason_Name__c.field-meta.xml
<CustomField>
    <fullName>Reason_Name__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Reason__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Name</label>
    <type>Text</type>
</CustomField>