force-app/main/default/objects/Issue_Hierarchy__c/fields/ReasonDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>ReasonDisplayOrder__c</fullName>
    <description>Feed Outbound - Hardcode value 0</description>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReasonDisplayOrder</label>
    <type>Text</type>
</CustomField>