force-app/main/default/objects/Issue_Hierarchy__c/fields/RptCategory__c.field-meta.xml
<CustomField>
    <fullName>RptCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RptCategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>