force-app/main/default/objects/Issue_Hierarchy__c/fields/SUBJECT_CODE__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUBJECT_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>