force-app/main/default/objects/Issue_Hierarchy__c/fields/SUBJECT_DESC__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT_DESC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUBJECT_DESC</label>
    <length>75</length>
    <type>Text</type>
</CustomField>