force-app/main/default/objects/Issue_Hierarchy__c/fields/Survey_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Survey_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Requirements</label>
    <length>20</length>
    <type>Text</type>
</CustomField>