force-app/main/default/objects/Issue_Hierarchy__c/fields/Text_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Text_Product_Line__c</fullName>
    <description>It is only for Issue_Hierarchy_Outbound feed.</description>
    <formula>Product_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Product Line</label>
    <type>Text</type>
</CustomField>