force-app/main/default/objects/Issue_Hierarchy__c/fields/Threshold_With_Manf_Info__c.field-meta.xml
<CustomField>
    <fullName>Threshold_With_Manf_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Threshold With Manf Info</label>
    <length>20</length>
    <type>Text</type>
</CustomField>