force-app/main/default/objects/Issue_Hierarchy__c/fields/Threshold_With_Prod_Desc_Only__c.field-meta.xml
<CustomField>
    <fullName>Threshold_With_Prod_Desc_Only__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Threshold With Prod Desc Only</label>
    <length>20</length>
    <type>Text</type>
</CustomField>