force-app/main/default/objects/Issue_Hierarchy__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>