force-app/main/default/objects/Issue_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Classification_Des__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Issue_Type_Name__c</columns>
    <columns>Reason_Name__c</columns>
    <columns>Cause_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Group__c</columns>
    <columns>Group_Code__c</columns>
    <columns>Group_Desc__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Pqrb_Rtp_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>3327417</value>
    </filters>
    <label>Issue</label>
</ListView>