force-app/main/default/objects/Issue_Hierarchy__c/listViews/Issue_Hierarchy_BD.listView-meta.xml
<ListView>
    <fullName>Issue_Hierarchy_BD</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Factory_Controllable_Flag__c</columns>
    <columns>LastModifiedDate__c</columns>
    <columns>Active__c</columns>
    <columns>Issue_Type_Name__c</columns>
    <columns>Classification_Des__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Reason_Name__c</columns>
    <columns>Cause_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Group__c</columns>
    <columns>Group_Code__c</columns>
    <columns>Group_Desc__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Pqrb_Rtp_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>IH23664</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>IH22776</value>
    </filters>
    <label>Issue Hierarchy BD</label>
</ListView>