force-app/main/default/objects/Issue_Hierarchy__c/listViews/Issue_Hierarchy_JW.listView-meta.xml
<ListView>
    <fullName>Issue_Hierarchy_JW</fullName>
    <columns>NAME</columns>
    <columns>CauseId__c</columns>
    <columns>Factory_Controllable_Flag__c</columns>
    <columns>LastModifiedDate__c</columns>
    <columns>Active__c</columns>
    <columns>Issue_Type_Name__c</columns>
    <columns>Classification_Des__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Reason_Name__c</columns>
    <columns>Cause_Name__c</columns>
    <columns>Cause_Code__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Group__c</columns>
    <columns>Group_Desc__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CauseId__c</field>
        <operation>equals</operation>
        <value>1700520</value>
    </filters>
    <label>Issue Hierarchy JW</label>
</ListView>